--- a/src/components/techList.css
+++ b/src/components/techList.css
@@ -1,5 +1,4 @@
 .header {
-    background-color: teal;
     width: 100%;
     height: 400px;
     display: grid;
@@ -9,4 +8,17 @@
 .header h1 {
     text-align: center;
     font-size: 30px;
+}
+
+.header .buttons button {
+    width: 100%;
+}
+
+form {
+    display: grid;
+    justify-content: center;
+}
+
+form h1 {
+    font-size: 25px;
 }
